tests/ui/flatten_and_methods.stderr
error: proc-macro derive panicked
  --> $DIR/flatten_and_methods.rs:21:10
   |
21 | #[derive(StructOpt, Debug)]
   |          ^^^^^^^^^
   |
   = help: message: methods and doc comments are not allowed for flattened entry
